# routes/placesRouter.js
@@ -4,4 +4,9 @@ const placesController = require('./../controller/placesController');
 const router = express.Router();
 router.get("/", authController.protect, placesController.findplaces);
 router.get('/:place', authController.protect, placesController.findplace);
+router.get(
+  "/recommendedplaces/longitude/:longitude/latitude/:latitude",
+  authController.protect,
+  placesController.findplacesByCoordinates
+);
 module.exports = router;
